--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   connectivity: ^3.0.6
   internet_connection_checker_plus: ^2.2.0
   flutter_local_notifications: ^17.1.2
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
